# compute-shade-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
examples/: compute.rs
examples/shaders/: compute.comp
src/: cell.rs  error.rs  event_loop.rs  lib.rs  main.rs  ring_buffer.rs  thread_shared.rs  timer.rs  utils.rs  window.rs
src/audio/: mod.rs
src/vulkan/: mod.rs  multi_buffer.rs  multi_image.rs
src/vulkan/resources/: buffer.rs  command_buffer.rs  command_pool.rs  descriptor_layout.rs  descriptors.rs  device.rs  device_memory.rs  fence.rs  image.rs  image_view.rs  instance.rs  memory_mapping.rs  physical_device.rs  pipeline.rs  pipeline_layout.rs  sampler.rs  semaphore.rs  surface.rs  surface_info.rs  swapchain.rs
src/vulkan/resources/shader_module/: analysis.rs  mod.rs
