[package]
name = "compute-shade-rs"
version = "0.1.0"
rust-version = "1.70"
edition = "2021"

[dependencies]
ash = { version = "0.37.0", features = ["linked"] }
ash-window = "0.12.0"
ctrlc = "3.4.1"
filetime = "0.2.18"
glsl = "*"
log = "0.4.17"
raw-window-handle = "0.5.0"
shaderc = "0.8.2"
simple_logger = "4.0.0"
winit = "0.27.5"
